--- a/_posts/2019-11-21-Git笔记.md
+++ b/_posts/2019-11-21-Git笔记.md
@@ -1,3 +1,7 @@
+| layout | title   | date        | description | tag  |
+| ------ | ------- | ----------- | ----------- | ---- |
+| post   | Git笔记 | 201９-11-21 |             | 博客 |
+
 # Git笔记
 
 ## 	Git简介
