--- a/_posts/2019-11-21-Git笔记.md
+++ b/_posts/2019-11-21-Git笔记.md
@@ -1,8 +1,6 @@
 | layout | title   | date        | description | tag  |
 | ------ | ------- | ----------- | ----------- | ---- |
-| post   | Git笔记 | 201９-11-21 |             | 博客 |
-
-# Git笔记
+| post   | Git笔记 | 201９-11-21 | 安装、创建  | 博客 |
 
 ## 	Git简介
 
